--- a/imednet/templates/subjects.html
+++ b/imednet/templates/subjects.html
@@ -1,10 +1,21 @@
 {% extends 'base.html' %}
 {% block content %}
 <h1>Subjects for {{ study_key }}</h1>
+<form method="get" class="mb-3">
+  <div class="input-group">
+    <input type="text" name="filter" class="form-control" placeholder="key=value" value="{{ filter_text }}">
+    <button type="submit" class="btn btn-primary">Filter</button>
+  </div>
+</form>
 <ul class="list-group">
   {% for subj in subjects %}
   <li class="list-group-item">{{ subj.subject_key }}</li>
   {% endfor %}
 </ul>
-<a href="{{ url_for('list_sites', study_key=study_key) }}" class="btn btn-secondary mt-3">View Sites</a>
+<div class="mt-3">
+  <a href="{{ url_for('list_sites', study_key=study_key) }}" class="btn btn-secondary">View Sites</a>
+  <a href="{{ url_for('extract_records', study_key=study_key) }}" class="btn btn-secondary">Extract Records</a>
+  <a href="{{ url_for('list_open_queries', study_key=study_key) }}" class="btn btn-secondary">Open Queries</a>
+  <a href="{{ url_for('query_state_counts', study_key=study_key) }}" class="btn btn-secondary">Query Counts</a>
+</div>
 {% endblock %}
