docs: update credential instructions

--- a/imednet/templates/base.html
+++ b/imednet/templates/base.html
@@ -12,7 +12,7 @@
         <div class="navbar-nav">
           <a class="nav-link" href="{{ url_for('list_studies') }}">Studies</a>
           <a class="nav-link" href="{{ url_for('list_users') }}">Users</a>
-          <a class="nav-link" href="{{ url_for('credentials_form') }}">Credentials</a>
+          <a class="nav-link" href="{{ url_for('credentials_list') }}">Credentials</a>
         </div>
       </div>
     </nav>
