--- a/imednet/templates/credentials_form.html
+++ b/imednet/templates/credentials_form.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 {% block content %}
-<h1>Store Credentials</h1>
+<h1>Add Study Credentials</h1>
 <form method="post">
   <div class="mb-3">
     <label class="form-label">API Key</label>
@@ -12,10 +12,14 @@
   </div>
   <div class="mb-3">
     <label class="form-label">Study Key</label>
-    <input type="text" name="study_key" class="form-control">
+    <input type="text" name="study_key" class="form-control" required>
   </div>
   <div class="mb-3">
-    <label class="form-label">Password</label>
+    <label class="form-label">Study Name</label>
+    <input type="text" name="study_name" class="form-control" required>
+  </div>
+  <div class="mb-3">
+    <label class="form-label">Encryption Password</label>
     <input type="password" name="password" class="form-control" required>
   </div>
   <button type="submit" class="btn btn-primary">Save</button>
